...
        </View>
      )}
      <View className="mt-6">
        <Button
          large
          loading={loading}
          label="Continue"
          onPress={() => (showName ? signup() : checkIfEmailExist())}
        />
      </View>
    </View>
  )
}
...
