...
          promptAsync()
        }}
        className="bg-white flex-row w-64 h-12 items-center justify-center rounded-xl px-2"
        style={{ ...shadowCard }}
      >
        <Icon icon="google" containerClassName="mr-2" />
        <Text className="text-lg font-medium font-roboto">Continue with Google</Text>
      </TouchableOpacity>
    </View>
  )
}

