...
      name: 'Contact',
      icon: 'mail',
      route: 'mailto:contact@bubblewrap.ai',
      slug: 'contact',
    },
    {
      name: isLoggedIn ? 'Sign Out' : 'Log in or create an account',
      icon: 'logOut',
      slug: isLoggedIn ? 'sign_out' : 'log_in',
      onPress: () => {
        capture(`profile:${isLoggedIn ? 'sign_out' : 'log_in'}_press`)
        isLoggedIn ? singOut() : router.push('/auth')
      },
...
