...
      <Icon
        icon="arrowLeft"
        size="large"
        containerClassName="rounded-full justify-center items-center bg-white "
        styleClassName="w-full h-full"
        onPress={() => onGoBack()}
        testID="back-button"
        accessibilityHint='Navigates to the previous screen'
        accessibilityLabel='Go Back'
      />

      <Animated.View className="mx-auto" style={alwaysShow ? {} : animatedStyle}>
        <Text body weight="bold" styleClassName="text-center">
...
