...
        <View
          className="flex-row bg-white rounded-lg mx-6 absolute bottom-6"
          style={{ ...shadowCard }}
        >
          <SearchBar
            onChange={onSearch}
            testId="search-bar"
            onFocus={() => {
              capture('add_ingredients:search_press')
              navOpacity.value = withTiming(0, { duration: 200 })
              sectionListRef.current?.scrollToOffset({
                offset: SEARCH_SCROLL_OFFSET,
                animated: true,
...
      {!!hasSelection && showHeader && (
        <View
          style={{ paddingBottom: inset.bottom }}
          className="absolute bottom-3 w-full z-20 px-6"
        >
          <Button
            testID="save-selection-button"
            label="Save Selection"
            large
            enableHaptics
            loading={loading}
            onPress={() => {
              onSave(selectedItems)
...
