...
      if (!item.name) return <View className="w-full h-64 bg-white" />
      const isChecked = !!selectedItems[item.id]?.selected
      return (
        <View className="px-6 py-2 bg-white">
          <IngredientListItem
            name={item.name}
            testID="ingredient-list-item"
            checked={isChecked}
            onPress={() => {
              handleSelect(item.id, item.name)
            }}
            onInfoPress={() => {
              capture('add_ingredients:ingredient_details_press', { ingredient_name: item.name })
...
