...
          <View className="items-center">
            <TouchableOpacity
              className="p-1"
              onPress={() => {
                router.push({ pathname: '/auth/email-and-password', params: { attemptedRoute } })
              }}
              testID="auth-email-password"
            >
              <Text body styleClassName="text-neutral-800 font-medium underline underline-offset-3">
                Continue with Email & Password
              </Text>
            </TouchableOpacity>
          </View>
...
