...
          autofocus={autofocus}
        />

        <Icon
          icon="settings"
          size="large"
          testID="filter-icon"
          containerClassName="bg-neutral-100 rounded-r-lg"
          accessibilityLabel="Filters"
          accessibilityRole="button"
          color={colors.neutral[500]}
          onPress={() => {
            router.push('/filters')
...
        )}
      </View>

      <FilterChips
        styleClassName="px-6"
        categories={selectedFilters}
        testIDItem="filter-chip"
        onDismiss={(filter) => {
          removeFilter(filter, false)
          capture('browse:filter_remove', { filter_name: filter.name })
        }}
      />
    </View>
...
