...
  return (
    <View className="fle flex-row justify-between items-center px-4 mt-auto py-6">
      <View className="px-2 flex-1/2">
        <Button
          label="Clear"
          outline
          testID="clear-all-filters-button"
          enableHaptics
          onPress={() => {
            // Capture the event that the user removed each filter
            for (const filter of selectedFilters) {
              capture('browse:filter_remove', {
                filter_name: filter,
...
        />
      </View>
      <View className="px-2 flex-1">
        <Button
          label={`Show (${resultCount ?? ''}) recipe${resultCount === 1 ? '' : 's'}`}
          enableHaptics
          testID="apply-filters-button"
          disabled={!resultCount}
          onPress={() => {
            const itemsAdded = draftSelectedFilters.filter(
              (item) => !selectedFilters.find((filter) => filter.id === item.id),
            )
            const itemsRemoved = selectedFilters.filter(
...
