appId: com.apple.Preferences
---
# - launchApp
# - scrollUntilVisible:
#     element: 'Safari'
# - tapOn: 'Safari'
# - scroll
# - scrollUntilVisible:
#     element:
#       text: 'Clear History and Website Data'
# - tapOn: 'Clear History and Website Data'
# - tapOn: 'All history'
# - tapOn:
#     id: 'ClearHistoryButton'
- runFlow: launch-app.yml
- tapOn: Profile, tab, 4 of 4
- tapOn: Log in or create an account
- tapOn: Continue with Google
- tapOn: Continue
- tapOn: 'Milad Alizadeh milaadd@googlemail.com'
