appId: ''
---
- runFlow: ../prep/launch-app.yml
- runFlow: ../prep/login.yml
- runFlow: ../prep/go-to-recipe.yml
- tapOn:
    id: favourite-button
- tapOn:
    id: back-button
- assertVisible:
    id: recipe-card
    index: 0
- tapOn:
    id: favourites-tab
- assertVisible:
    id: favourite-recipe
    text: ${ maestro.copiedText }
    index: 0
- tapOn:
    id: favourite-recipe-delete
- assertVisible:
    id: empty-favourites
