appId: ''
---
- runFlow: ../prep/launch-app.yml
- runFlow: ../prep/login.yml
# Go to the My Bar tab
- tapOn:
    id: 'my-bar-tab'

# Dismiss the tooltip
- tapOn:
    point: '50%,51%'
- tapOn:
    point: '50%,51%'

# Check that the bar is empty
- assertVisible:
    id: 'empty-bar'

# Add ingredients to the bar
- tapOn:
    id: 'add-ingredients-button'
- tapOn:
    id: 'ingredient-list-item'
    index: 0
- tapOn:
    id: 'ingredient-list-item'
    index: 1
- copyTextFrom:
    id: 'ingredient-list-item'
    index: 0

# Search for ingredients name and add it to the bar
- tapOn:
    id: search-bar
- copyTextFrom:
    id: ingredient-list-item
    index: 3
- inputText: ${ maestro.copiedText }
- tapOn:
    id: ingredient-list-item
    index: 0
- tapOn:
    id: save-selection-button

# Check that the ingredients are added to the bar
- assertVisible: ${ maestro.copiedText }
- assertVisible:
    id: bar-ingredient-list-item
    index: 0
- assertVisible:
    id: bar-ingredient-list-item
    index: 1
- assertVisible:
    id: bar-ingredient-list-item
    index: 2

# Delete the ingredients from the bar
- tapOn:
    id: bar-ingredient-list-item-delete
    index: 0
- tapOn:
    id: bar-ingredient-list-item-delete
    index: 0
- tapOn:
    id: bar-ingredient-list-item-delete
    index: 0
- assertVisible:
    id: empty-bar
