appId: ''
---
- tapOn:
    id: profile-tab
- tapOn:
    id: profile-list-log_in
- tapOn:
    id: auth-email-password
- tapOn:
    id: email
- inputText: milaadd+test@gmail.com
- tapOn:
    id: password
- inputText: FJEtYkKfrOJSQEnT0mMZ
- tapOn: Sign in
