appId: ''
---
- runFlow: ../prep/launch-app.yml
- runFlow: ../prep/go-to-category.yml
- tapOn:
    id: 'filter-icon'
- tapOn:
    id: 'filter-list-item'
    index: 0
- copyTextFrom:
    id: 'sub-filter-list-item'
    index: 1
- tapOn:
    id: 'sub-filter-list-item'
    index: 1
- tapOn:
    id: 'apply-filters-button'
- assertVisible:
    id: filter-chip
    text: ${ maestro.copiedText }
