appId: ''
---
- runFlow: ../prep/launch-app.yml
- runFlow: ../prep/go-to-category.yml
- tapOn:
    id: 'filter-icon'
- tapOn:
    id: 'clear-all-filters-button'
- assertNotVisible:
    id: filter-chip
    text: ${ maestro.copiedText }
